--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <img src="https://i.postimg.cc/MKdhy06Z/family.jpg" id="family_member_image" width="150px" height="200px">
             <h4 id="family_member_name"></h4>
-            <button>onclick="update();"Siguiente<button>
+            <button onclick="update();">Siguiente</button>
            <!-- Depura el código anterior para crear un botón con funcionalidad onclick como se indica a continuación-->
             <!-- <button onclick="update();">Siguiente</button>  -->
           
